# agent-bouncer

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  STATUS.md  pyproject.toml  requirements-starting-type-adaptation.txt  requirements.txt  start.sh  stop.sh
benchmark-explore/: README.md  build_content_samples.py  index.html  samples.js
configs/: paper_a_sft.yaml  paper_a_sft_v2_release_anchor.json  starting_type_adaptation_v1.yaml
docs/: README.md  architecture.md  benchmarks.md  bug-audit-2026-07-06.md  ensembles.md  index.md  mortgage-benchmark-hard-results.md  paper-a-improvement-and-extension-recommendations.md  paper-b-compose-dont-tune-plan.md  paper-b-development-checkpoint-plan.md  paper-b-feasibility-investigation.md  paper-b-joint-compliance-stack-plan.md  paper-b-topic-proposal.md  paper-c-objective-axis-reward-and-design.md  reproducibility-environments.md  reproducibility.md
docs-site/: build-docs.mjs  docs-nav.js  docs.css  docs.js  index.html  llms.txt  m-architecture.html  m-benchmarks.html  m-benchmarks.md  m-datasets.html  m-ensembles.html  m-ensembles.md  m-fine-tuning.html  m-fine-tuning.md  m-roadmap.html  m-slm-architectures.html  m-slm-architectures.md  m-taxonomy.html  m-workflow.html  m-workflow.md
experiments/: README.md  analyze_composition.py  analyze_klsft.py  analyze_paper_a_sft.py  audit_paper_a_splits.py  build_paper_reproduction_notebook.py  emit_adaptation_tex.py  ensemble_deployable.py  eval_corrected.py  eval_expguard_external.py  eval_mortgage_hard.py  eval_paper_a_sft.py  eval_starting_type_adaptation.py  guard_eval_pipeline.py  lock_paper_a_sft.py  make_figures.py  name_fairness_probe.py  package_paper_a_release.py  paper_a_common.py  paper_a_manifest_lib.py  preflight_starting_type_adaptation.py  prepare_paper_a_manifests.py  run_extra_models.sh  (+6 more)
(+259 files in other folders)
